docs(FormDemo): ensure nav buttons look nice on smallest screen size

--- a/@udir-design/react/src/demo/form-demo/FormDemo.module.css
+++ b/@udir-design/react/src/demo/form-demo/FormDemo.module.css
@@ -76,6 +76,7 @@
 .navigateButtons {
   display: flex;
   gap: var(--ds-size-2);
+  white-space: nowrap;
 }
 
 .desktop {
